force-app/main/default/objects/SAV_Notification_Config__mdt/SAV_Notification_Config__mdt.object-meta.xml
<CustomObject>
    <label>SAV Notification Config</label>
    <pluralLabel>SAV Notifications Configs</pluralLabel>
</CustomObject>