force-app/main/default/objects/SAV_Notification_Config__mdt/fields/Email_Template_API__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_API__c</fullName>
    <label>Email Template API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>