force-app/main/default/objects/SAV_Notification_Config__mdt/fields/Envoye_Push__c.field-meta.xml
<CustomField>
    <fullName>Envoye_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoye Push</label>
    <type>Checkbox</type>
</CustomField>