force-app/main/default/objects/SAV_Notification_Config__mdt/fields/SMS_Template_EN__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_EN__c</fullName>
    <label>SMS Template EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>