force-app/main/default/objects/SAV_Notification_Config__mdt/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>